<resources>
    <string name="app_name">Projeto Eventos</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="create_new_account">Não possui conta? Crie uma.</string>
    <string name="already_member">Já é membro? Faça login.</string>
    <string name="create_account">Criar conta</string>
    <string name="authenticating">Autenticando...</string>
    <string name="login_failed">Usuário ou senha inválidos</string>
    <string name="signup_failed">Falha ao criar conta</string>
    <string name="signup_success">Conta criada! Faça o login</string>
    <string name="creating_account">Criando conta...</string>
    <string name="save">Salvar</string>
    <string name="none">Nenhum</string>
    <string name="building">Prédio</string>
    <string name="floor">Andar</string>
    <string name="room">Sala</string>
    <string name="auditorium">Auditório</string>
    <string name="laboratory">Laboratório</string>
    <string name="lecture">Palestra</string>
    <string name="minicourse">Mini-curso</string>
    <string name="panel_discussion">Mesa redonda</string>
    <string name="registration">Credenciamento</string>
    <string name="interval">Intervalo</string>
    <string name="coffeebreak">Lanche</string>
    <string name="location">Local</string>
    <string name="see_activity">Ver atividades</string>
    <string name="type">Tipo</string>
    <string name="date">Data</string>
    <string name="status">Status</string>
    <string name="edit_event">Editar evento</string>
    <string name="logout">Desconectar-se</string>
    <string name="logout_confirm">Você será desconectado.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="edit_location">Editar localização</string>
    <string name="pick_location">Escolher local</string>
    <string name="event_status_in_progress">Em andamento</string>
    <string name="event_status_open">Aberto</string>
    <string name="event_status_finished">Finalizado</string>
    <string name="event_status_canceled">Cancelado</string>
    <string name="from">De</string>
    <string name="to">até</string>
    <string name="initial_day">dia inicial</string>
    <string name="final_day">dia final</string>
    <string name="initial_hour">hora inicial</string>
    <string name="final_hour">hora final</string>
    <string name="activities">Atividades</string>
    <string name="related_location">Locais relacionados</string>
    <string name="obrigatory">Obrigatório</string>
    <string name="new_event">Novo evento</string>
    <string name="activity_list">Lista de atividades</string>
    <string name="add">Adicionar</string>
    <string name="activity_list_empty">A lista de atividades está vazia!</string>
    <string name="edit_activity">Editar atividade</string>
    <string name="value">Valor</string>
    <string name="final_hour_after_initial">A hora de término deve ser após a hora de início</string>
    <string name="initial_hour_before_final">A hora de início deve ser antes da hora de término</string>

</resources>
