<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifpi.projetoeventos.EditLocationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:id="@+id/view">
            <EditText
                android:id="@+id/location_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:layout_alignParentEnd="true" />

        </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/location_edit_coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_location"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="false"
                android:gravity="center"
                style="@style/Widget.AppCompat.Button.Borderless"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"/>

        <Spinner
            android:id="@+id/location_edit_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="string/location_related_locations"
            android:layout_marginTop="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_location_related"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="18dp"/>

        <Button
            android:id="@+id/location_edit_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/white"
            android:text="@string/save"/>
    </LinearLayout>
</ScrollView>
